--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node src/server.js",
     "start:dev": "nodemon server.js"
   },
   "keywords": [],
