--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "prettier": "^3.5.3",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-json": "^4.0.1",
     "nodemon": "^3.1.9"
   }
 }
