--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
     "prettier": "^3.5.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
