--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.2",
     "prettier": "^3.5.3",
     "socket.io": "^4.8.1",
     "twilio": "^5.5.2"
