--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^7.11.1",
+    "@grpc/grpc-js": "^1.13.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "google-gax": "^5.0.0",
     "multer": "^1.4.5-lts.2",
     "prettier": "^3.5.3",
     "socket.io": "^4.8.1",
