--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,15 @@
-# fly.toml app configuration file generated for yaammoo-backend on 2025-06-22T16:00:09Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
+# fly.toml app configuration file
 app = 'yaammoo-backend'
 primary_region = 'cdg'
 
 [build]
+
+[env]
+  NODE_ENV = "production"
+  GRPC_VERBOSITY = "ERROR"
+  GRPC_TRACE = ""
+  GRPC_SSL_CIPHER_SUITES = "HIGH+ECDSA"
+  NODE_TLS_REJECT_UNAUTHORIZED = "1"
 
 [http_service]
   internal_port = 3000
