--- a/fly.toml
+++ b/fly.toml
@@ -6,10 +6,18 @@ primary_region = 'cdg'
 
 [env]
   NODE_ENV = "production"
-  GRPC_VERBOSITY = "ERROR"
-  GRPC_TRACE = ""
-  GRPC_SSL_CIPHER_SUITES = "HIGH+ECDSA"
+  PORT = "3000"
+  # Configuration SSL/TLS pour gRPC
+  GRPC_SSL_CIPHER_SUITES = "ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS"
   NODE_TLS_REJECT_UNAUTHORIZED = "1"
+  SSL_CERT_FILE = "/etc/ssl/certs/ca-certificates.crt"
+  SSL_CERT_DIR = "/etc/ssl/certs"
+  # Configuration Firebase/Firestore
+  GOOGLE_CLOUD_PROJECT = ""
+  GCLOUD_PROJECT = ""
+  # Désactiver les émulateurs
+  FIRESTORE_EMULATOR_HOST = ""
+  FIREBASE_AUTH_EMULATOR_HOST = ""
 
 [http_service]
   internal_port = 3000
@@ -19,8 +27,14 @@ primary_region = 'cdg'
   min_machines_running = 0
   processes = ['app']
 
+[deploy]
+  release_command = "echo 'Deploying with gRPC support...'"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[experimental]
+  auto_rollback = true
