--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
     "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.7.13",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.14.1",
     "google-gax": "^5.0.0",
+    "grpc": "^1.24.11",
     "multer": "^1.4.5-lts.2",
     "prettier": "^3.5.3",
     "socket.io": "^4.8.1",
